# trktor

./: .gitignore  README.md  poc.py  pyproject.toml
cli/: run.py
imaging/: banner-generator.py
trktor/cli/: run.py
trktor/graphics/: __init__.py  banner.py  poc.py
trktor/graphics/utils/: __init__.py  font.py
trktor/messaging/discord/: poc.py
trktor/models/: ConfigDataModel.py
